[Fix] -> Margin, padding between comments fixed. Reply Edit Cancel Reply -> Capitalize, removed letter spacing, increased font size.

--- a/assets/css/unminified/style-rtl.css
+++ b/assets/css/unminified/style-rtl.css
@@ -5020,10 +5020,8 @@ input[type="color"]::-webkit-color-swatch {
 .ast-comment-list #cancel-comment-reply-link {
   white-space: nowrap;
   margin-right: 1em;
-  font-size: 11px;
+  font-size: 13px;
   font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
 }
 
 .ast-comment-list .ast-comment-edit-reply-wrap {
@@ -5056,10 +5054,8 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 .ast-comment-edit-reply-wrap {
-  font-size: 11px;
+  font-size: 13px;
   font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
 }
 
 .ast-edit-link {
@@ -5111,7 +5107,7 @@ input[type="color"]::-webkit-color-swatch {
 
 .ast-comment-cite-wrap {
   text-align: right;
-  font-size: 1.1em;
+  font-size: 1.2em;
   margin-bottom: 4px;
   text-transform: capitalize;
 }
@@ -5132,7 +5128,6 @@ input[type="color"]::-webkit-color-swatch {
 
 .comment-reply-title #cancel-comment-reply-link {
   float: left;
-  text-transform: uppercase;
 }
 
 .ast-comment-meta {
@@ -5140,7 +5135,7 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 .ast-comment-time .timendate {
-  font-size: 1em;
+  font-size: 1.1em;
   margin-left: 0.5em;
 }
 
@@ -5242,7 +5237,6 @@ input[type="color"]::-webkit-color-swatch {
   padding-bottom: 0;
   padding-top: 0;
   margin-bottom: 0;
-  margin-top: 36px;
 }
 
 .ast-separate-container .ast-comment-list li.depth-1 .ast-comment,
@@ -5256,7 +5250,7 @@ input[type="color"]::-webkit-color-swatch {
 
 .ast-separate-container .ast-comment-list .comment-respond {
   padding: 2.25em 0 0 0;
-  margin: 2.35em 0 0 0;
+  margin: 2.25em 0 0 0;
   background-color: transparent;
 }
 
